<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.finance_application.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_Members"
            android:name="com.example.finance_application.ui.dashboard.MembersFragment"
            android:label="@string/nav_member"
            tools:layout="@layout/fragment_members"/>

    <fragment
            android:id="@+id/navigation_Finance"
            android:name="com.example.finance_application.ui.notifications.FinanceFragment"
            android:label="@string/nav_finance"
            tools:layout="@layout/fragment_finance"/>
</navigation>