<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f6f7fb"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:context=".Welcome_page">

    <LinearLayout
            android:id="@+id/section_A"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f6f7fb"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_alignParentLeft="true">


        <TextView
                android:text="@string/finance"
                android:textColor="#ef7b00"
                android:textSize="25dp"
                android:layout_marginTop="100dp"
                android:textAlignment="center"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView" android:gravity="center_horizontal"/>
        <TextView
                android:text="@string/application"
                android:textAlignment="center"
                android:textColor="#848586"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/section_B"
            android:layout_below="@id/section_A"
            android:orientation="vertical"
            android:background="#f6f7fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="10dp">
        <com.comix.rounded.RoundedCornerImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/upload_image_profile"
                android:src="@drawable/img"
                android:layout_width="150dp"
                android:layout_marginTop="50dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"

                android:scaleType="fitXY"
                app:cornerBottomDisable="false"
                app:cornerLeftDisable="false"
                app:cornerRightDisable="false"
                app:cornerTopDisable="false"
                app:cornerColor="#f6f7fb"
                app:cornerRadius="30dp"
        />

    </LinearLayout>
    <LinearLayout
            android:id="@+id/Section_C"
            android:layout_below="@id/section_B"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/stayupdate"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="60dp"
                android:textColor="#848586"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView3"/>
        <TextView
                android:text="@string/Your_finance"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#848586"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/Section_D"
            android:layout_below="@id/Section_C"
            android:orientation="horizontal"
            android:layout_width="377dp"
            android:layout_marginTop="60dp"
            android:layout_height="207dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">


        <Button
                android:text="Sign Up"
                android:background="@drawable/textview_corner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"

                android:id="@+id/SignUp_form"
                android:layout_margin="15dp"
                android:layout_weight="1"/>
        <Button
                android:text="LOGIN"

                android:background="@drawable/textview_corner"
                android:layout_margin="15dp"
                android:backgroundTint="#ef7b00"
                android:textColor="#FFF"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/Login_form"
                android:layout_weight="1"/>
    </LinearLayout>



</RelativeLayout>